--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -L",
-    "test": "mocha -w ./tests/**/*.spec.js"
+    "start": "cross-env NODE_ENV=development nodemon -L",
+    "test": "cross-env NODE_ENV=test jest --verbose --watchAll"
   },
   "author": "Luciano",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ioredis": "^4.19.2",
@@ -28,9 +29,11 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",
+    "jest": "^29.4.1",
     "supertest": "^6.0.1",
     "supertest-session": "^4.1.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
